# ColabGeek

./: README.md  pyproject.toml
src/ColabGeek/: ColabGeek.py  __init__.py
src/ColabGeek/shell_scripts/: Install_Homebrew.exp  Install_Jekyll.exp  Install_Miniconda.sh  Install_Ruby.exp  Install_rbenv.exp  Run_Rstudio_server.sh  Run_Stable_Diffusion_WebUI.exp  Run_code_server.exp
