[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"ColabGeek.shell_scripts" = ["*"]

[project]
name = "ColabGeek"
version = "1.3.8"
authors = [
    {name = "Yiming Sun",email = "yiming.sun12138@gmail.com"},
]
description = "ColabGeek is designed to help run useful tools on Google Colab, including port forwarding, web IDE and so on. It is worth noting that this package is also compatible with other Ubuntu operating system servers, so try on other platforms as well."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
full = ["jupyter_server"]

[project.urls]
"Homepage" = "https://github.com/yimingsun12138/ColabGeek"
"Bug Tracker" = "https://github.com/yimingsun12138/ColabGeek/issues"
